--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kangfenmao/react-native-minimizer",
-  "version": "1.0.0",
-  "description": "test",
+  "version": "1.0.1",
+  "description": "Minimize or redirect back to previous APP, works on Android And iOS.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
